--- a/style.css
+++ b/style.css
@@ -13,3 +13,43 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
+
+/**************
+
+ABOUT
+
+**************/
+
+#about {
+  margin: 60px auto;
+  max-width: 400px;
+  text-align: center;
+}
+#about img {
+  width: 120px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+#about .name {
+  font-size: 19px;
+}
+#about .vocation {
+  color: rgba(87, 95, 95, 0.8);
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+#about .skills {
+  font-size: 15px;
+  color: rgba(9, 109, 194, 0.8);
+}
+#about .email {
+  margin-top: 14px;
+  font-size: 14px;
+}
+#about .icons {
+  margin-top: 20px;
+  font-size: 30px;
+}
+#about .icons a {
+  color: rgba(87, 95, 95, 0.8);
+}
