Added project section, designed card templates.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,17 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
-
+p {
+  font-size: 14px;
+}
+h2 {
+  font-weight: bold;
+  font-size: 23px;
+  margin-bottom: 20px;
+}
+a.font-black {
+  color: #000 !important;
+}
 /**************
 
 ABOUT
@@ -52,4 +62,25 @@ ABOUT
 }
 #about .icons a {
   color: rgba(87, 95, 95, 0.8);
+}
+
+/*******************
+
+PROJECTS
+
+******************/
+
+#project {
+  margin: 60px auto;
+  width: 80%;
+}
+#project h2 {
+  text-align: center;
+}
+#project .card img {
+  width: 100%;
+  height: auto;
+}
+#project .card-title {
+  font-weight: bold;
 }
